27_matrix_input/grade.txt
Grading at Fri May 29 05:19:33 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:42:10: error: implicit declaration of function ‘strchr’ [-Werror=implicit-function-declaration]
       if(strchr(a,'\n')==NULL)
          ^
rotateMatrix.c:42:10: error: incompatible implicit declaration of built-in function ‘strchr’ [-Werror]
rotateMatrix.c:42:10: note: include ‘<string.h>’ or provide a declaration of ‘strchr’
rotateMatrix.c:50:4: error: implicit declaration of function ‘frintf’ [-Werror=implicit-function-declaration]
    frintf(stderr,"%s could not open\n",a);
    ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
